# qwen-image-finetune

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MERGE_REQUEST.md  README.md  TODO.md  __init__.py  accelerate_config.yaml  bf16_inference_optimization.md  figaro_dataset_stats.json  prepare_face_seg_data.py  project.toml  pyproject.toml  pytest.ini  quick_setup.sh  requirements.txt  run.sh  run2.sh  run_tests.py  setup.sh  test_config.yaml
configs/: bria_fibo_edit_lora_with_cache.yaml  bria_fibo_t2i_lora_with_cache.yaml  chroma_t2i_lora_with_cache.yaml  example_fluxkontext_fp16.yaml  example_with_sampling.yaml  face_seg_config.yaml  face_seg_flux_kontext_fp16.yaml  face_seg_flux_kontext_fp16_huggingface_dataset.yaml  face_seg_flux_kontext_fp16_prodigy.yaml  face_seg_flux_kontext_fp4.yaml  face_seg_flux_kontext_fp8.yaml  face_seg_fp4_4090.yaml  face_seg_fp4_config.yaml  face_seg_fp4_non_cache_config.yaml  flux2_i2i_fp16_config.yaml  flux2_i2i_fp4_config.yaml  flux2_t2i_fp16_config.yaml  flux2_t2i_fp4_config.yaml  flux_kontext_bf16.yaml  flux_kontext_fp4.yaml  flux_kontext_fp8.yaml  hidream_i1_t2i_lora_with_cache.yaml  hunyuan_image_it2i_lora_with_cache.yaml  hunyuan_image_t2i_lora_with_cache.yaml  ktp_flux_kontext_fp16.yaml  ktp_flux_kontext_fp16yaml  ktp_flux_kontext_fp16yaml copy  longcat_image_edit_lora_with_cache.yaml  longcat_image_t2i_lora_with_cache.yaml  ovis_image_t2i_lora_with_cache.yaml  qwen2511_full_finetune.yaml  qwen2511_lora_full_coverage.yaml  qwen2511_lora_local_model.yaml  qwen2511_lora_no_cache.yaml  qwen2511_lora_with_cache.yaml  qwen_image_edit_config.yaml  qwen_image_edit_config_inpainting.yaml  qwen_image_edit_config_inpainting_edit_mask.yaml  qwen_image_edit_config_inpainting_v2.yaml  qwen_image_edit_config_r2.yaml  (+4 more)
data/: test_prompt.txt
docs/: CHANGELOG.md  README_cache.md  TODO.md  attention-mask-mse-loss.md  cache-system.md  configuration.md  data-preparation.md  debug.md  huggingface-dataset.md  huggingface-related.md  implementation-progress-summary.md  inference.md  (+10 more)
(+384 files in other folders)
